--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ button {
 }
 
 .header { 
-	padding: 25px 30px; 
+	padding: 25px 0; 
 	position: fixed;
 	top: 0px;
 	width: 100%;
@@ -94,6 +94,7 @@ button {
 
 .header .header-nav li + li {
 	margin-right: 30px; 
+	color: rgba(255, 255, 255, .75);
 }
 
 .header .header-nav li:last child {
@@ -102,9 +103,7 @@ button {
 
 /* ==Default component end== */
 /* ==== Custom styles start ===== */
-.main { 
-	height: 900px;
-}
+
 .inner {
 	background: url('../img/inner-bg.jpg') no-repeat center / cover;
 	height: 100vh;
@@ -136,7 +135,7 @@ button {
 }
 
 
-.inner h6 {
+.inner span {
 	font-size: 18px;
 	letter-spacing: 0.1em;
 	font-weight: 300;
