+grid & about studio

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,22 @@ button {
 	text-align: center;
  }
 
+ .text-right {
+	text-align: right;
+}
+
+.text-justify {
+	text-align: justify;
+}
+
+.bg-black {
+	background-color: #111;
+}
+
+.bg-grey {
+	background-color: #f8f8f8;
+}
+
 /* ==Default classes end== */
 
 /* ==Default component start== */
@@ -55,8 +71,16 @@ button {
 	Buttons, text, title, small-section, section, header, footer, form elements, icons, tabs, blockquote, container
  */
 
+ .default-section {
+	padding: 135px 0;
+}
+
+.small-section {
+	padding: 70px 0;
+}
+
 .container {
-	max-width: 1599px;
+	max-width: 1600px;
 	padding: 0 15px;
 	margin: auto;
 }
@@ -89,7 +113,11 @@ button {
 	color: #fff;
 	line-height: 33px;
 	text-transform: uppercase;
-	margin-right: 30px; 
+	margin-right: 30px;
+	font-size: 11px; 
+	letter-spacing: .3em;
+	font-weight: 400;
+	color: rgba(255, 255, 255, .75);
 }
 
 .header .header-nav li + li {
@@ -101,13 +129,86 @@ button {
 	margin-right: 0;
 }
 
+.title {
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+	color: #111;
+}
+.title.title-white {
+	color: #fff;
+}
+.title.section-title {
+	font-size: 18px;
+	letter-spacing: .5em; /* 0.5em = .5em */
+	margin-bottom: 75px;
+	font-weight: 400;
+}
+.title.section-title-light {
+	font-size: 18px;
+	letter-spacing: .3em;
+	margin-bottom: 20px;
+	font-weight: 300;
+}
+
+.default-text {
+	font-size: 15px;
+	line-height: 1.7333;
+	font-weight: 300;
+}
+
+blockquote, 
+.blockquote {
+	font-size: 24px;
+	font-weight: 300;
+	line-height: 1.6;
+}
+blockquote span, 
+.blockquote span {
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: .2em;
+}
+
+.btn {
+	display: inline-block;
+	padding: 12px 20px;
+	border-radius: 2px;
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: 400;
+	font-family: 'Open Sans';
+}
+
+.btn.btn-default {
+	background-color: #e5e5e5;
+	color: #777;
+}
+
+.btn.btn-default:hover {
+	background-color: #d1d0d0;
+}
+
+.btn.btn-black {
+	background-color: #323232;
+	color: #fff;
+}
+
+.btn.btn-black:hover {
+	background-color: #000;
+}
+
+.btn.btn-xs {
+	padding: 7px 15px;
+	font-size: 11px;
+}
 /* ==Default component end== */
 /* ==== Custom styles start ===== */
-
+/* ---inner--- */
 .inner {
 	background: url('../img/inner-bg.jpg') no-repeat center / cover;
 	height: 100vh;
 	text-align: center;
+	padding-top: 73px;
 }
 
 .inner::before {
@@ -118,12 +219,12 @@ button {
 	margin-left: -4px;
 }
 
-.inner-content {
+.inner .inner-content {
 	display: inline-block;
 	vertical-align: middle;
 }  
 
-.inner h1 {
+.inner .inner-content h1 {
 	font-family: 'Dosis';  
 	font-weight: 300;
 	font-size: 30px;
@@ -134,14 +235,49 @@ button {
 	margin-bottom: 90px;
 }
 
-
-.inner span {
+.inner .inner-content span {
 	font-size: 18px;
 	letter-spacing: 0.1em;
 	font-weight: 300;
 	color: #d1d0d0;
 	font-family: 'Open Sans';
 }
+/* ---inner end--- */ 
+/* ---About studio--- */
+
+.about-studio .team-item .team-item-info span{
+	display: block;
+}
+
+.about-studio .team-item .team-item-name {
+	text-transform: uppercase;
+	text-align: center;
+}
+.about-studio .team-item .team-item-info .team-item-role{
+	font-size: 12px;
+	margin-top: 12px;
+	text-transform: uppercase;
+}
+
+.team-item .team-item-img {
+	position: relative;
+}
+
+.team-item .team-item-skills {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	transition: all .2s linear;
+}
+
+.team-item .team-item-img:hover .team-item-skills {
+	opacity: 1;
+}
+
+/* ---About studio end--- */
 
 /* ==== Custom styles end ===== */
 
