--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,14 @@ blockquote {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.pull-left {
+	float:left;
+}
+
+.pull-right {
+	float: right;
+}
 /* ==Default classes end== */
 
 /* ==Default component start== */
@@ -118,7 +126,7 @@ blockquote {
 
 .header { 
 	padding: 25px 0; 
-	position: fixed;
+	position: absolute;
 	top: 0px;
 	width: 100%;
 	z-index: 99;
@@ -202,7 +210,7 @@ blockquote span,
 	width: 100%;
 	border: 1px solid #e5e5e5;
 	border-radius: 2px;
-	height: 36px;
+	height: 40px;
 	font-family: 'Open Sans';
 	font-weight: 400;
 	font-size: 12px;
@@ -217,7 +225,7 @@ blockquote span,
 }
 
 textarea.form-control {
-	min-height: 82px;
+	min-height: 90px;
 	padding-top: 10px;
 }
 
@@ -305,7 +313,7 @@ textarea.form-control {
 	border-radius: 2px;
 	font-size: 14px;
 	transform: rotate(45deg);
-}
+} 
 .rhomb-icon i {
 	transform: rotate(-45deg);
 }
@@ -313,10 +321,36 @@ textarea.form-control {
 	color: #fff;
 	background-color: #111;
 }
+
+.rhomb-icon.white-icon {
+	background-color: #fff;
+	color: #111;
+}
+
+.rhomb-icon.large-icon {
+	width: 27px;
+	height: 27px;
+	line-height: 27px;
+}
 .rhomb-icon.transparent-icon {
 	color: #111;
 	border: 1px solid rgba(0, 0, 0, .7);
 } 
+
+.arrow-up {
+	font-size: 50px;
+	color: #c6c6c6;
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
+	cursor: pointer;
+}
+
+.arrow-down {
+	position: absolute;
+	left: 50%;
+	bottom: 40px;
+}
 
 /* ==Default component end== */
 
@@ -406,10 +440,83 @@ textarea.form-control {
 	height: 100%;
 	background-color: #000;
 	transition: all .2s linear;
+	padding: 40px;
+}
+
+.team-item .team-item-img .team-item-skills .title { 
+	margin-bottom: 25px;
+}
+.team-item .team-item-img .team-item-skills p {
+	font-size: 13px;
+	line-height: 1.6;
+	color: rgba(255, 255, 255, .5);
+	margin-bottom: 40px;
 }
 
 .team-item .team-item-img:hover .team-item-skills {
 	opacity: 1;
+}
+
+.skill-item span {
+	font-size: 11px;
+	color:#fff; 
+	display: block;
+	text-transform: uppercase;
+	letter-spacing: .2em;
+	margin-bottom: 2px;
+}
+
+.progress-wrapp {
+	width: 100%;
+	height: 12px;
+	background-color: rgba(255, 255, 255, .15);
+	overflow: hidden;
+}
+
+.progress-wrapp .progress {
+	background-color:rgba(255, 255, 255, .75);
+	height: 12px;
+	width: 0%; 
+	transition: width .5s ease-out;
+}
+
+.skill-item {
+	margin-bottom: 15px;
+}
+
+.skill-item:last-child {
+	margin-bottom: 0;
+}
+.team-item .team-item-img:hover .branding {
+	width: 80%;
+}
+
+.team-item .team-item-img:hover .development {
+	width: 70%;
+}
+
+.team-item .team-item-img:hover .design {
+	width: 50%;
+}
+
+.team-item .team-item-img:hover .photography {
+	width: 65%;
+}
+
+.progress-wrapp .progress.branding {
+	transition: width .5s ease-out;
+}
+
+.progress-wrapp .progress.development {
+	transition: width .5s ease-out .2s;
+}
+
+.progress-wrapp .progress.design {
+	transition: width .5s ease-out .2s;
+}
+
+.progress-wrapp .progress.photography {
+	transition: width .5s ease-out .2s;
 }
 
 /* ---About studio end--- */
@@ -723,6 +830,10 @@ textarea.form-control {
 /* ---Subscibe end--- */
 
 /* ---Contacts--- */
+.contact-items-wrapper {
+	margin-bottom: 80px;
+}
+
 .contact-item .contact-item-content {
 	display: inline-block;
 	vertical-align: middle;
@@ -746,13 +857,77 @@ textarea.form-control {
 	font-size: 15px;
 	color: #444;
 }
+
+.contact-form {
+	margin: 0 -5px;
+	overflow: hidden;
+}
+
+.contact-form .form-col {
+	float: left;
+	width: 50%;
+	padding: 0 5px;
+}
+
+.contact-form .form-control + .form-control {
+	margin-top: 10px;
+}
+
+.contact-form button {
+	margin-top: 20px;
+}
+
+.contact-form .form-info i {
+	margin-top: 32px;
+}
+
+
 /* ---Contacts end--- */
+/* ---Map start--- */
+#map {
+	height: 410px;
+}
+
+.map-container {
+	position: relative;
+}
+
+.on-map-block {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .9);
+	top: 0;
+	left: 0;
+}
+.map-container:hover .on-map-block {
+	display: none;
+}
+
+.on-map-block-content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	text-align: center;
+}
+
+.on-map-block-content .large-icon {
+	display: inline-block;
+}
+
+.on-map-block-content .title {
+	display: block;
+	margin-top: 25px;
+	margin-bottom: 0;
+	letter-spacing: .3em;
+}
+
+/* ---Map end--- */
 
 /* ---Footer start--- */
 .footer {
 	padding-top: 140px;
 	padding-bottom: 55px;
-	background-color: #f8f8f8;
 }
 
 .footer .footer-social-nav {
@@ -763,6 +938,14 @@ textarea.form-control {
 .footer .footer-social-nav .rhomb-icon {
 	display: inline-block;
 	vertical-align: middle;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+}
+
+.footer .footer-social-nav .rhomb-icon i {
+	font-size: 14px;
 }
 
 .footer .footer-social-nav .rhomb-icon:hover {
